Changed auth/login approach for Managers